--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,11 +12,13 @@ events {
 
 
 http {
+    client_max_body_size 800M;
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     client_header_buffer_size 64k;
     large_client_header_buffers 4 64k;
-    
+    fastcgi_read_timeout 600;
+    proxy_read_timeout 600;
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
