--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   nginx-proxy:
     container_name: nginx-proxy
     restart: on-failure
-    image: "jwilder/nginx-proxy:alpine"
+    image: "repository.staging.derilinx.com/nginx-proxy:$IMAGE_TAG" 
     ports:
       - "80:80"
       - "443:443"
@@ -29,7 +29,7 @@ services:
       com.github.jrcs.letsencrypt_nginx_proxy_companion.nginx_proxy: "true"
   letsencrypt-nginx-proxy-companion:
     container_name: nginx-proxy-letsencrypt-sidecar
-    image: "jrcs/letsencrypt-nginx-proxy-companion:latest"
+    image: "repository.staging.derilinx.com/letsencrypt-nginx-proxy-companion:$IMAGE_TAG"
     environment:
       - NGINX_PROXY_CONTAINER=nginx-proxy
     volumes:
